[package]
name = "eat_bite_game"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.37", features = ["full"] }
rand = "0.8"
hyper = "1"
tower-http = { version = "0.5", features = ["cors"] }
[term]
color = "always"
